# task-scheduler-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  entrypoint.sh  flake.nix  lefthook.yml  task-scheduler.nix
.sqlx/: query-125b4460e42d4b9ccbadcce2d70c3886b35b63f3ced707673d3b32a899329929.json  query-2c1340b17f5fa2bd2d511e6db0b44aa1fae7d690aff075fbc8c729d36ce50859.json  query-49ec0fd7b3ac99949a09540f10b74180ae298b4dd0ccf16b255cb3f1fc3d1866.json  query-4f28c9855a87500c39fc4e88308b16b87bf12743e25be5d1707c07edd8d94dfd.json  query-5b25046d4120243560038191bec0a216ce2c246a1710c9b009e50c978e3c1971.json  query-839690c6a7294f72dd0ec7753ba81e67293afdcfd1b70db0f411297dfd6b51f9.json  query-aeef2a901bc81883d868d8ef7f91d13c595e289322ed7aee09afa873bd672ec8.json  query-c6e49c93d592c0d1864a653999ea7b2ac73fd31784a2323980025211ac8abfba.json
db/migrations/: 20240824191655_initial_schema.sql
proto/: messages.proto  rpc.proto
src/: amqp.rs  db.rs  id.rs  main.rs  prometheus.rs  protos.rs  rpc_server.rs
