[package]
name = "task-scheduler-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
chrono = "0.4.38"
dotenvy = "0.15.7"
prost = "0.13.1"
prost-types = "0.13.1"
sqlx = { version = "0.8.1", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
] }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tonic = "0.12.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ulid = "1.1.3"

[build-dependencies]
prost-build = "0.13.1"
tonic-build = "0.12.1"
